[package]
name = "eden-ecos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"HtmlElement",
	"MouseEvent",
	"DomRect",
	"Screen",
	"Window",
]